Changes: - Made windows have iframe instead of fetching url - Made iframes not catch pointerEvents if the window isnt focused, or if it's being dragged - Adpated 404.html and minigame.html for the iframe change - Removed the last "\\f" of apps_data.jsonc, to save a few bytes (lol) - Fix issue where reload button jumps a little when animating.

--- a/res/main.css
+++ b/res/main.css
@@ -104,6 +104,8 @@
 }
 
 .desktop_window topbar #window_refresh {
+  will-change: transform;
+  
   height: 3vh;
   width: 3vh;
   
@@ -125,11 +127,13 @@
   }
 }
 
-.desktop_window app_container {
+.desktop_window #app_container {
   display: block;
 
   height: calc(100% - 4vh);
   width: 100%;
+  
+  border: none;
 }
 
 .desktop_window.full {
